# factcheckenv

./: .env.example  .gitignore  README.md  app.py  inference.py  init_supabase.py  openenv.yaml  pyproject.toml  requirements.txt
environment/: __init__.py  env.py  evidence_store.py  graders.py  tasks.py
environment/data/: claims.json
server/: app.py
