[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "factcheckenv"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "python-dotenv",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
